List of user-visible changes of C Ratfor.

New in XXX
-----------
 * The name of the package has been changed to "C Ratfor" (previously was
   "Public Domain Ratfor").
 * The handling of the return statement has been improved and strenghened,
   especially with reference to error messages.  For example, a return
   statement outside a function or subroutine is now flagged as an error,
   as is a return statement with arguments inside a subroutine.
 * Ratfor does not handle the dot character `.' as an alphanumeric
   character anymore.  This change should have few visible consequences,
   the most important of which is probably the fact that the `define'
   builtin can't anymore define symbolic constants containing dots.
 * Fixed a bug which prevented the automatical enabling of warnings
   flags in the C compiler.

New in 1.0m
-----------
 * The testsuite have been fixed to work also with gfortran version 4.0.
   Previously it didn't work because of a misbehaviour in gfortran-4.0,
   which caused the `STOP' builtin in the compiled programs to be too much
   verbose even when used without arguments.

New in 1.0l
-----------
 * Public Domain Ratfor uses files imported from SteLib (e.g. `maint.mk',
   `GNUmakefile' and `ax_check_cc_flag.m4').  Some related reorganization
   and modifications have been required.

New in 1.0k
-----------
 * The ratfor testsuite, which is composed only of blackbox-style test
   scripts, is now a subpackage, with its own configure script, makefiles,
   auto* auxiliary files etcetera.  It has been moved from the `tests/'
   subdirectory into the `blackbox-tests/' subdirectory.

New in 1.0j
-----------
 * Since Fortran 77 is ubiquitous today, and Fortran 66 almost forgotten,
   Ratfor now output Fortran 77 code, without bothering anymore about
   Fortran 66 compatibility.
 * The `string' directive is no more recognized.  It should be superseded
   by the improved string-handling capabilities of Fortran 77.