@@ -4,6 +4,6 @@
 # C Ratfor: a ratfor preprocessor written in C.
 # Makefile for the doc/ subdirectory.
 
-dist_man1_MANS = ratfor.man
+dist_man1_MANS = c-ratfor.man
 
 ## vim: ft=automake noet sw=4 ts=4
